...
          tabBarIcon: renderHouseIcon,
        }}
      />
      <Tabs.Screen
        name='explore'
        options={{
          title: 'Explore',
          // cspell:ignore paperplane
          tabBarIcon: renderHouseIconWithColorScheme,
          tabBarAccessibilityLabel: 'nav-explore',
        }}
      />
    </Tabs>
  );
};
export default TabLayout;
...
