...
const HomeScreen: React.FC = () => (
  <ParallaxScrollView
    headerBackgroundColor={{ light: '#A1CEDC', dark: '#1D3D47' }}
    headerImage={<Image source={PartialReactLogo} style={styles.reactLogo} />}
  >
    <ThemedView style={styles.titleContainer}>
      <ThemedText type='title'>Welcome!</ThemedText>
      <HelloWave />
    </ThemedView>
    <ThemedView style={styles.stepContainer}>
      <ThemedText type='subtitle'>Step 1: Try it</ThemedText>
      <ThemedText>
        Edit <ThemedText type='defaultSemiBold'>app/(tabs)/index.tsx</ThemedText> to see changes. Press{' '}
        <ThemedText type='defaultSemiBold'>
          {Platform.select({
            ios: 'cmd + d',
            android: 'cmd + m',
...
