appId: com.takudev.musicpracticetracker.development
---
- launchApp
- assertVisible: 'Welcome!'
- assertVisible: 'Step 1: Try it'
- tapOn: 'nav-explore'
- assertVisible: 'Explore'
